Update README. Add patches. Update persistence.conf.

--- a/live-persistence/persistence.conf
+++ b/live-persistence/persistence.conf
@@ -1,6 +1,8 @@
-/home/amnesia/Persistent	source=Persistent
-/var/cache/apt/archives	source=apt/cache
-/var/lib/apt/lists	source=apt/lists
-/home/amnesia	source=dotfiles,link
-/etc/apt/sources.list.d  source=apt/sources.list.d,link
-/etc/apt/trusted.gpg.d source=apt/trusted.gpg.d,link
+/home/amnesia/Persistent        source=Persistent
+/home/amnesia/.gnupg    source=gnupg
+/var/cache/apt/archives source=apt/cache
+/var/lib/apt/lists      source=apt/lists
+/usr/local/deb source=apt/deb-repo
+/etc/apt/sources.list.d source=apt/sources.list.d,link
+/etc/apt/trusted.gpg.d  source=apt/trusted.gpg.d,link
+/home/amnesia   source=dotfiles,link
